# puppet-xen

./: .gitignore  .sync.yml  .travis.yml  Makefile.am  README.md  TODO  configure.ac  metadata.json
facts.d/: xen-facter
files/: xen-loopback.conf  xen-modules.conf  xencommons
lib/puppet/provider/domu/: domu.rb
lib/puppet/provider/xen_domu/: xen_domu.rb
lib/puppet/type/: domu.rb  xen_domu.rb
manifests/: domu.pp  init.pp  paths.pp
spec/unit/puppet/provider/domu/: domu_spec.rb
spec/unit/puppet/type/: domu_spec.rb
src/common/: libxl_loader.c  libxl_loader.h
src/libxl-ruby/: Makefile.am
src/libxl-ruby/.libs/: libxl-ruby.lai
src/libxl-ruby/po/: POTFILES.in
src/xen-facter/: Makefile.am  main.c  xen-facter
src/xen-facter/docs/: Doxyfile.in  Makefile.am
src/xen-facter/po/: Makevars  POTFILES.in
templates/: depend-on-save-dir.conf.epp  domu_config.epp  xendomains.epp  xl.conf.epp
types/: action.pp  change.pp  firmware.pp  passthrough.pp  type.pp  uuid.pp
